Changes in PixelLight 0.9.10-R1 (not yet released)
- Feature: There's now official 64 bit support (no prebuild SDK, but building PixelLight is easy and described in detail within the "PixelLightBuild"-document)
- Feature: Added Mac OS X support (>=10.6, "PLRendererOpenGL"-port is still under construction)
- Feature: Added support for 2D array textures within the renderer (kind of 3D texture, but without filtering between the depth layers)
- Feature: Added scene node modifier "PLEngine::SNMEgoLookController" for restricted 3D look around and "PLEngine::SNMEgoOrbitingController" for restricted 3D orbiting
- Feature request ID: 3443487 (Windows): Added critical section support to the mutex implementation
- Feature request ID: 3439371: Added method "PLCore::Socket::IsDataWaiting()"
- Feature: Added "PLRenderer::TextureBuffer::DownloadAsImage()" downloading texture data from the GPU as "PLGraphics::Image" instance which can e.g. be used to save the data easily
- Feature: Added comfort renderer program wrapper "PLRenderer::ProgramWrapper" and ease of use methods within "PLRenderer::ShaderLanguage" and "PLRenderer::UniformBuffer"
- Feature (not part of the prebuild SDK): Added "PLUnitTests" and "PLUnitTestsPerformance" basing on UnitTest++ (http://unittest-cpp.sourceforge.net/) as replacement for the old unit tests
- Change: Various minor bugfixes and usability improvements within the CMake based build system to make building PixelLight across multiple platforms as painless as possible
- Change: Made more methods inline in order to give the compiler a chance to optimize out function calls
- Change: Renamed the document "PixelLightCodingConventions" into "PixelLightConventions" and continued to add more details
- Change: "PLRendererOpenGL" is now making the upload and the on-the-fly compression of 3D textures easier for the graphics driver in case extensive texture data is given (reduces the risk of a driver crash)