@@ -1,3 +1,9 @@
+>> 20.12.2011
+[CO]
+- Minor "SplitTouchPad" and "AndroidSplitTouchPadDevice" cleanup
+
+
+
 >> 14.12.2011
 [CO]
 - "SpaceMouse": Added comment about the expected range of the values (they are not scaled to e.g. "1.0" in order to have access to the original device data)
