@@ -1,6 +1,7 @@
 Changes in PixelLight 0.9.10-R1 (not yet released)
 - Feature: There's now official 64 bit support (no prebuild SDK, but building PixelLight is easy and described in detail within the "PixelLightBuild"-document)
 - Feature: Added Mac OS X support (>=10.6, "PLRendererOpenGL"-port is still under construction)
+- Feature: Added "PLInput::SplitTouchPad": This is a gamepad device emulation by using a touch screen making it possible to e.g. move & look at the same time, Android backend implemented
 - Feature: Added support for 2D array textures within the renderer (kind of 3D texture, but without filtering between the depth layers)
 - Feature: Added scene node modifier "PLEngine::SNMEgoLookController" for restricted 3D look around and "PLEngine::SNMEgoOrbitingController" for restricted 3D orbiting
 - Feature request ID: 3443487 (Windows): Added critical section support to the mutex implementation
